# datalake

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
datalake/: __main__.py
datalake/config/: __init__.py  settings.py
datalake/dashboard/: __main__.py
datalake/docs/: __main__.py  conf.py  index.rst
datalake/docs/_diagrams/: sequence.puml
datalake/docs/pages/: directory_structure.rst
datalake/downloader/: __main__.py  yelp_dataset.py
datalake/pipelines/: yelp.py
